test_regress/t/t_param_type_bad.out
%Error: t/t_param_type_bad.v:9:27: Expecting a data type, not a constant: 2
    9 |    localparam type bad2 = 2;   
      |                           ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
